       values (DPT 14.xxx). Corresponding commands that have been added are 
       'DATE', 'TIME', 'ENERGY' and 'POWER' (Kenneth Stridh, ORCJAVA-362).
     * Support for DPT 232.600 (RGB values) and DPT 16.001 (text fields) added, 
       implementation converted internally to EventListener API (Marcus Redeker, 
       ORCJAVA-291, ORCJAVA-294, ORCJAVA-301)

  - HTTP protocol: 
     * Methods GET, POST, PUT and DELETE are now supported.
     * For HTTP/JSON return documents, a JSON Path expression is supported.
     * HTTP content-type headers are supported (Marcus Redeker, ORCJAVA-260) 
     * For outgoing HTTP request, a user agent header is included which 
       contains 'OpenRemoteController' as agent value which HTTP 
       applications can use to identify requests originating from the 
       controller. 
     * Internally, the implementation has been converted to use URIs 
       instead of URLs which resolves an issue with lack of encoding of 
       HTTP parameters  which contain which contain white spaces or other 
       special characters. 
     * HTTP related logs now appear in their own file under /logs/http/http.log 
       (Juha Lindfors, ORCJAVA-368)

  - UDP protocol:
     * Sending hex values by prefixing command data with '0x' string added.
     * Receiving of UDP packets added (ORCJAVA-392)
     * Add an option to specify what type of line ending is used for sent 
       UDP commands. Defaults to 'NONE', other options are 'CR', 'LF' and 'CRLF' 
       (Simon Vincent, ORCJAVA-393)

  - One Wire: Added possibility to specify temperature values in
    either Celsius (default), Kelvin, Fahrenheit or Rankine scales, data
    property added for sending values to switches (Marcus Redeker)
  - Shell Command Execution: polling interval and regular expression
    filtering on return values supported, including regexp groups to 
    read in multiple sensor values at once. Support for using shell